# sqreen-dotnet-windows

./: .gitmodules  README.md  build.cmd  exercise_net.md  runfirst-buildcoreclr.cmd  useful-info.md
SqreenAspNetCore/: SqreenAspNetCore.sln
SqreenAspNetCore/SqreenAspNetCore/: Dockerfile  Program.cs  SqreenAspNetCore.csproj  Startup.cs  WeatherForecast.cs  trace.json
SqreenAspNetCore/SqreenAspNetCore/Controllers/: WeatherForecastController.cs
SqreenAspNetCore/SqreenAspNetCore/Properties/: launchSettings.json
SqreenAspNetCore/SqreenAspNetCoreDemo/: Program.cs  SqreenAspNetCoreDemo.csproj  Startup.cs  start.cmd
SqreenAspNetCore/SqreenAspNetCoreDemo/Controllers/: HelloWorldController.cs
SqreenAspNetCore/SqreenAspNetCoreDemo/Properties/: launchSettings.json
SqreenAspNetCore/SqreenHeader/: HeaderMiddleware.cs
profiler/: build.cmd  test.bat
profiler/src/ClrProfiler/: CMakeLists.txt  ClrProfiler.vcxproj  CorProfiler.cpp  CorProfiler.h  clr_helpers.cpp  clr_helpers.h  config_loader.cpp  dllmain.cpp
